static/src/stylesheets/module/commercial/glabs/_hosted.scss
/* ... */
.host__header {
    display: flex;
    flex-direction: column;

    @include mq(tablet) {
        padding: 0 $gs-gutter;
    }
}

.host__body {
    position: relative;
}

.hosted__side {
    @include mq($until: desktop) {
        &:before,
        &:after {
            display: none;
        }
    }
}

.hosted-page + footer {
    display: none;
}

.hosted-page--bright {
    .hosted__banner .hosted-tone-btn,
    .hosted-tone-btn:focus,
    .hosted-tone-btn:hover {
        color: #ffffff;
        svg {
            fill: #ffffff;
        }
    }

    .hostedbadge.hosted-tone-bg {
        .hostedbadge__info {
            color: #ffffff;
        }
    }

    ~ .survey-overlay-simple {
        .survey-text__header {
            color: #ffffff;

            .site-message__close-btn {
                border-color: #ffffff;

                .inline-cross {
                    fill: #ffffff;
                }
            }
        }
    }

    &.hosted-article-page .content__article-body p.intro + p::first-letter {
        color: #ffffff;
    }
}

.hosted__glogo {
    display: inline-block;
    padding: 4px $gs-gutter / 2;
    background-color: $guardian-brand;
    text-align: right;

    svg {
        fill: #ffffff;
    }

    .inline-logo {
        display: inline-block;
        margin-top: -5px;
    }

    @include mq(mobile) {
        svg {
            width: 115px;
            height: 40px
        }
    }

    @include mq(tablet) {
        svg {
            width: 185px;
            height: 50px;
        }
    }
}

.hosted__glogotext {
    @include f-headlineSans;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: .5px;
    line-height: 16px;

    margin: 0;
    text-align: left;
    color: rgba(255, 255, 255, .5);
}

.hosted-page ~ .survey-overlay-simple {
    .survey-container {
        @include mq(tablet) {
            top: 40%;
        }
    }
}

.hosted-video-page {
    .hosted__container.host {
        position: relative;
        background: transparent;
        color: #ffffff;

        @include mq($until: desktop) {
            padding: 0;
        }
    }

    .hosted__glogo {
        @include mq(leftCol) {
            margin-right: 90px;
        }

        @include mq(wide) {
            margin-right: 170px;
        }
    }
}

.hosted__container--content {
    @include mq($until: leftCol) {
        display: flex;
        flex-direction: column;

        .host__header {
            padding-top: 0;
            padding-bottom: 0;
        }
    }
}

.hosted__container--full.host {
    @include mq($until: desktop) {
        padding: 0;
    }

    .u-responsive-ratio {
        overflow: visible;

        @include mq($from: desktop) {
            width: $hosted-video-width;
            padding-bottom: $hosted-video-height;
            margin: 0 auto;
            overflow: hidden;
        }
    }
}

.hosted__video.gu-media--video {
    vertical-align: top;
}

.hosted__youtube-video ~ .hosted__youtube-poster-image .hosted__youtube-play-button,
.hosted-article-page figure div > div .vjs-big-play-button .vjs-control-text, //no useful class name here!
.hosted__video.gu-media--video .vjs-big-play-button .vjs-control-text {
    @include fs-textSans(4);
    margin-left: 16px;
    margin-top: 0;
    width: 136px;
    height: 48px;
    text-indent: -999px;
    color: #ffffff;
    border: 2px solid #ffffff;
    border-radius: 30px;
    @include mq(desktop) {
        margin-left: 0;
    }

    &:before {
        content: 'Watch now';
        background-color: transparent;
        text-indent: 0; //I want to show 'Watch now' text instead of the hardcoded "Play Video"
        position: absolute;
        top: 14px;
        left: 34px;
        font-size: 16px;
        width: 92px;
    }

    &:after {
        top: 50%;
        left: 20%;
        border-width: 8px 8px 8px 18px;
        border-color: transparent transparent transparent $neutral-7;
    }
}
/* ... */

